src/test/ui/feature-gates/feature-gate-postfix_addr_of.rs
fn main() {
    _ = ().&; //~ error: .& syntax is experimental
}
